--- a/Portal/package.json
+++ b/Portal/package.json
@@ -32,6 +32,7 @@
     "react-papaparse": "^4.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
+    "react-webcam": "^7.0.0",
     "router": "^1.3.6",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.4"
